--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Repository for my personal website/portfolio.",
   "main": "index.js",
   "scripts": {
-      "dev": "next",
-      "build": "next build",
-      "start": "next start"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "author": "Frank Lawrence Gunsch",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
