--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-spring": "^8.0.25"
   },
   "devDependencies": {
+    "react-social-icons": "^4.1.0",
     "standard": "^12.0.1"
   }
 }
